# N2D2

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile.in  MANIFEST.in  Makefile  N2D2.cbp  N2D2.cmake  README.md  appveyor.yml  diff.txt  doxygen.cfg  setup.py  strace.txt
exec/: CMakeLists.txt  README.md  aer_cars.cpp  aer_viewer.cpp  n2d2.cpp  n2d2.sh  n2d2_list_logo.hpp  n2d2_live.cpp  n2d2_live_fcnn.cpp
exec/AppFaceDetection/: IMDBWIKI.ini  run.sh
exec/AppFaceDetection/weights/: conv1.1.syntxt  conv2.1.syntxt  conv2.2.syntxt  conv3.1.syntxt  conv3.2.syntxt  conv3.3.syntxt  fc1.syntxt  fc2.syntxt  fc3.face.syntxt  fc3.gender.syntxt
exec/AppObjectRecognition/: GoogleNet.ini  run.sh
exec/AppObjectRecognition/weights_googlenet/: conv1_7x7_s2.syntxt  conv2_3x3.syntxt  conv2_3x3_reduce.syntxt  inception_3a_1x1.syntxt  inception_3a_3x3.syntxt  inception_3a_3x3_reduce.syntxt  inception_3a_5x5.syntxt  inception_3a_5x5_reduce.syntxt  inception_3a_pool_proj.syntxt  inception_3b_1x1.syntxt  inception_3b_3x3.syntxt  inception_3b_3x3_reduce.syntxt  inception_3b_5x5.syntxt  inception_3b_5x5_reduce.syntxt  inception_3b_pool_proj.syntxt  inception_4a_1x1.syntxt  inception_4a_3x3.syntxt  inception_4a_3x3_reduce.syntxt  inception_4a_5x5.syntxt  inception_4a_5x5_reduce.syntxt  inception_4a_pool_proj.syntxt  inception_4b_1x1.syntxt  inception_4b_3x3.syntxt  inception_4b_3x3_reduce.syntxt  inception_4b_5x5.syntxt  inception_4b_5x5_reduce.syntxt  (+28 more)
exec/AppRoadDetection/: KITTI_road.ini  run.sh
python/test_C_export/: CMakeLists.txt  n2d2_test.c
tests/: CMakeLists.txt  class_DeepNet.cpp  class_DeepNetQuantization.cpp  class_Environment.cpp  class_Histogram.cpp  class_StimuliProvider.cpp  run_all.sh
tests/Activation/: class_Activation.cpp
tests/Cell/: class_ActivationCell_Frame.cpp  class_ActivationCell_Frame_CUDA.cpp  class_BatchNormCell_Frame.cpp  class_BatchNormCell_Frame_CUDA.cpp  class_BatchNorm_Frame.cpp  class_BatchNorm_Frame_CUDA.cpp  class_ConvCell_Frame.cpp  class_ConvCell_Frame_CUDA.cpp  class_ConvCell_QuantizerLSQ_Frame_CUDA.cpp  class_ConvCell_QuantizerSAT_BNFusion_Frame_CUDA.cpp  class_ConvCell_QuantizerSAT_BNFusion_LeNet_Frame_CUDA.cpp  class_ConvCell_QuantizerSAT_Frame.cpp  class_ConvCell_QuantizerSAT_Frame_CUDA.cpp  class_ConvCell_QuantizerSAT_Refactored_Frame.cpp  class_ConvCell_QuantizerSAT_Refactored_Frame_CUDA.cpp  class_DistanceCell_Frame_CUDA.cpp  class_ElemWiseCell_Frame.cpp  class_ElemWiseCell_Frame_CUDA.cpp  class_FcCell_Frame.cpp  class_FcCell_Frame_CUDA.cpp  class_FcCell_QuantizerLSQ_Frame_CUDA.cpp  class_FcCell_QuantizerSAT_Frame.cpp  class_FcCell_QuantizerSAT_Frame_CUDA.cpp  class_FcCell_QuantizerSAT_Refactored_Frame.cpp  class_FcCell_QuantizerSAT_Refactored_Frame_CUDA.cpp  class_NormalizeCell_Frame.cpp  class_NormalizeCell_Frame_CUDA.cpp  class_PaddingCell_Frame.cpp  class_PaddingCell_Frame_CUDA.cpp  class_PoolCell_Frame.cpp  class_PoolCell_Frame_CUDA.cpp  class_PoolCell_Frame_EXT_CUDA.cpp  class_ROIPoolingCell_Frame.cpp  class_ROIPoolingCell_Frame_CUDA.cpp  class_ReshapeCell_Frame.cpp  class_ReshapeCell_Frame_CUDA.cpp  class_ResizeCell_Frame.cpp  class_ResizeCell_Frame_CUDA.cpp  class_SoftmaxCell_Frame.cpp  class_SoftmaxCell_Frame_CUDA.cpp  (+2 more)
tests/DataFile/: class_CsvDataFile.cpp
tests/Database/: class_Actitracker_Database.cpp  class_CIFAR_Database.cpp  class_CKP_Database.cpp  class_Caltech101_DIR_Database.cpp  class_Caltech256_DIR_Database.cpp  class_CaltechPedestrian_Database.cpp  class_Caltech_DIR_Database.cpp  class_CelebA_Database.cpp  class_Cityscapes_Database.cpp  class_DIR_Database.cpp  class_DOTA_Database.cpp  class_Database.cpp  class_FDDB_Database.cpp  class_GTSDB_DIR_Database.cpp  class_GTSRB_DIR_Database.cpp  class_GTSxB_DIR_Database.cpp  class_ILSVRC2012_Database.cpp  class_IMDBWIKI_Database.cpp  class_KITTI_Database.cpp  class_LITISRouen_Database.cpp  class_MNIST_IDX_Database.cpp
tests/Export/: class_CPP_Export.cpp  class_CPP_Export_Quantization.cpp  class_CPP_STM32_Export.cpp  class_CPP_cuDNN_Export.cpp  class_C_ConvCellExport.cpp  class_C_DeepNetExport.cpp  class_C_Export.cpp  class_C_FcCellExport.cpp  class_C_HLS_ConvCellExport.cpp  class_MemoryManager.cpp
tests/Generator/: class_CompositeDatabaseGenerator.cpp  class_ConvCellGenerator.cpp  class_DeepNetGenerator.cpp  class_MappingGenerator.cpp  class_StimuliProviderGenerator.cpp  class_TransformationGenerator.cpp
tests/ROI/: class_CircularROI.cpp  class_EllipticROI.cpp  class_PolygonalROI.cpp  class_ROI.cpp  class_RectangularROI.cpp
tests/Transformation/: class_AffineTransformation.cpp  class_ApodizationTransformation.cpp  class_ChannelExtractionTransformation.cpp  class_ColorSpaceTransformation.cpp  class_CompositeTransformation.cpp  class_CompressionNoiseTransformation.cpp  class_DFTTransformation.cpp  class_DistortionTransformation.cpp  class_EqualizeTransformation.cpp  class_FilterTransformation.cpp  class_FlipTransformation.cpp  class_GradientFilterTransformation.cpp  class_LabelExtractionTransformation.cpp  class_LabelSliceExtractionTransformation.cpp  class_MagnitudePhaseTransformation.cpp  class_MorphologyTransformation.cpp  class_NormalizeTransformation.cpp  class_PadCropTransformation.cpp  class_RandomAffineTransformation.cpp  class_RangeAffineTransformation.cpp  class_RangeClippingTransformation.cpp  class_RescaleTransformation.cpp  class_SliceExtractionTransformation.cpp  class_StripeRemoveTransformation.cpp  class_ThresholdTransformation.cpp  class_TrimTransformation.cpp  class_WallisFilterTransformation.cpp
tests/containers/: class_CudaTensor4d.cpp  class_Matrix.cpp  class_Tensor.cpp  class_Tensor2d.cpp  class_Tensor3d.cpp  class_Tensor4d.cpp
tests/controler/: class_Interface.cpp
tests/tests_data/: ResNet-18.ini  ResNet-block.ini.tpl
tests/utils/: class_ConfusionMatrix.cpp  class_IniParser.cpp  class_Kernel.cpp  class_Parameterizable.cpp  class_TemplateParser.cpp  class_Utils.cpp  namespace_BinaryCvMat.cpp  namespace_DSP.cpp  namespace_Random.cpp  namespace_Utils.cpp
(+4359 files in other folders)
